--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -5,3 +5,14 @@
 
 *{
     font-family: 'Open Sans', sans-serif;}
+.container{
+    max-width: 956px;
+    margin: 0 auto;
+}
+.promo{
+    max-height: 650px;
+    padding: 21px 0 93px 0;
+    background: url(../img/bg/bg1_859.jpg) center (center/cover) no-repeat;
+}
+@import '../sass/header';
+@import "../sass/button";
