--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -51,27 +51,41 @@
 }
 @media (max-width:575px){
 .button {
-    width: 120px;
-    height: 18px;
+    width: 300px;
+    height: 50px;
     background-color:$main-color;
     border-radius: 5px;
-    font-size: 10px;
-    font-weight: 300;
+    font-size: 16px;
+    font-weight: 500;
     text-transform: uppercase;
     color: $main-white;
     display: block;
+    margin: 0 auto;
     border: none;
+    &:hover{
+        font-size: 18px;
+        transition: 2s all;
+        border: none;
+    }
+    &:active{
+        border : none ;
+    }
     &_button_main {
         margin-top: 20px;
-        width: 200px;
-        height: 30px;
+        width: 300px;
+        height: 50px;
         background-color:$main-color;
         border-radius: 5px;
-        font-size: 12px;
+        font-size: 16px;
         font-weight: 400;
         text-transform: uppercase;
         color: $main-white;
         border: none;
+        &:hover{
+            font-size: 18px;
+            transition: 2s all;
+            border: none;
+        }
     }
 }
 }
