--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -293,5 +293,58 @@
 		}
 			
 	}
-}	
 }
+.consultation{
+	min-height:550px;
+    text-align: center;
+    h2.title{
+        margin-top: 30px;
+        font-size:20px;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: #ffffff;
+    }
+    h2.subtitle{
+        margin-top: 20px;
+        font-size: 14px;
+        font-weight: 300;
+        color: #ffffff;
+    }
+    .consult_form{
+        margin-top: 36px;
+        margin-bottom: 20px;
+        input{
+            border-radius: 5px;
+            width: 100%;
+            min-height: 50px;
+            padding: 0 20px;
+            margin-bottom: 15px;
+            border:none;
+            font-size: 14px;
+            font-weight: 500;
+            color: #ffffff;
+            &:focus{
+				background-color: rgba(255, 71, 71,0.2);
+				transition: 1s all;
+            }
+            &:nth-child(3){
+                margin-bottom: 20px;
+			}
+		}
+		button{
+			display: block;
+			margin: 0 auto;
+			border-radius: 5px;
+			border: none;
+			width: 100%;
+			height: 55px;
+			background-color:$main-color;
+			border-radius: 5px;
+			font-size: 16px;
+			font-weight: 500;
+			text-transform: uppercase;
+			color: #ffffff;
+		}
+    }  
+}
+}	
