--- a/src/sass/_subheader.scss
+++ b/src/sass/_subheader.scss
@@ -1,6 +1,6 @@
 @import "../sass/media";
 .subheader {
-	min-height: 400px;
+	min-height: 400gulppx;
 	text-align: center;
 	h2.title {
 		margin-top: 69px;
