--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -22,6 +22,14 @@
         color: $main-white;
         border: none;
     }
+    &_mini{
+            width: 131px;
+            height: 40px;
+            font-size: 14px;
+            font-weight: 500;
+            text-transform: uppercase;
+            color: #ffffff;
+    }
 }
 @media (max-width:768px){
     .button {
