add modal window + JS

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -21,3 +21,5 @@
 @import "../sass/carusel";
 @import "../sass/catalog";
 @import "../sass/comments";
+@import"../sass/footer";
+@import"../sass/modal";
