--- a/src/sass/_consult.scss
+++ b/src/sass/_consult.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    
     .title{
         margin-top: 100px;
         font-size: 36px;
@@ -24,6 +25,16 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+    .error{
+        border:1px solid red ;
+    }
+    label.error{
+        border:1px solid red ;
+        color:white;
+        border:none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
         input{
             border-radius: 5px;
             min-width:300px;
@@ -33,7 +44,7 @@
             border:none;
             font-size: 14px;
             font-weight: 500;
-            color: #ffffff;
+            color: #000000;
             &:focus{
                 background-color: rgba(255, 71, 71,0.2);
             }
