--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -23,11 +23,21 @@
 			line-height: 21px;
 			cursor: pointer;
 		}
-	.form{
+	.consult_form{
 		margin-top: 25px;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
+		.error{
+			border:1px solid red ;
+		}
+		label.error{
+			border:1px solid red ;
+			color: black;
+			border:none;
+			text-align: center;
+			margin-bottom: 15px;
+		}
 		input{
 			border-radius: 5px;
 			min-width:300px;
@@ -37,7 +47,7 @@
 			border:none;
 			font-size: 14px;
 			font-weight: 500;
-			color: #ffffff;
+			color: black;
 			&:focus{
 				background-color: rgba(255, 71, 71,0.2);
 			}
