--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,10 @@
 @import  '../sass/fonts';
 @import  '../sass/mixins';
 @import  '../sass/variables';
+@import '../sass/bootstrap-grid.min.scss';
+@import '../sass/bootstrap-reboot.min.scss';
+@import '../sass/slick-theme.scss';
+@import '../sass/slick.scss';
 
 *{
     font-family: 'Open Sans', sans-serif;}
