--- a/src/sass/_carusel.scss
+++ b/src/sass/_carusel.scss
@@ -5,12 +5,13 @@
 		display: block;
 		margin: 0 auto;
 		width: 100%;
-		height:auto;
+		max-height:500px;
 		img{
+			object-fit: cover;
 			display: block;
 			margin: 0 auto;
 			width: 100%;
-			height: auto;
+			max-height: 500px;
 		}
 	}
 	.slick-prev{
